--- a/Web.config
+++ b/Web.config
@@ -7,13 +7,19 @@
 
 <configuration>
 
-    <connectionStrings>
-        <add name="GroceryStoreSimulatorConnectionString" connectionString="Data Source=IL-Server-001.uccc.uc.edu\MSSQLSERVER2012;Initial Catalog=GroceryStoreSimulator;User ID=GroceryStoreSimulatorWebFormLogin;Password=RememberTheCat"
-            providerName="System.Data.SqlClient" />
-    </connectionStrings>
+    
     <system.web>
       <compilation debug="true" targetFramework="4.5.2" />
       <httpRuntime targetFramework="4.5.2" />
     </system.web>
 
+  <connectionStrings>
+    <add name="GroceryStoreSimulatorConnectionString" 
+         connectionString="Data Source=IL-Server-001.uccc.uc.edu\MSSQLSERVER2012;
+         Initial Catalog=GroceryStoreSimulator;
+         User ID=GroceryStoreSimulatorWebFormLogin;
+         Password=RememberTheCat"
+        providerName="System.Data.SqlClient" />
+  </connectionStrings>
+  
 </configuration>
